tests/NormalTests/paczka1/fuzzy1/39805031.err
Error in line 2: Jffhy4Gb6US A200 17,1
Error in line 14: S895 S895 1,0
Error in line 12: a3a2CZ S895 38,9
Error in line 25: Jffhy4Gb6US S895 112,8
Error in line 29: a3a2CZ S259 86,1
Error in line 33: a3a2CZ S895 69,7
Error in line 34: a3a2CZ S259 64,7
